--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -12,8 +12,89 @@ body {
 	padding: 0;
 }
 
+/* 전체 감싸진 영역  */
+#background_box {
+	background-image: url("../../resources/sej_img/back2.jpg");
+}
+
+/* Header 영역 css */
+#top_header {
+	width: 100%;
+	height: 150px;
+	padding-top: 15px;
+	/* background-image: url("../../resources/sej_img/back2.jpg"); */
+	/* background-color: #EEEBDF; */
+}
+
+.header_contents_box {
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+}
+
+.header_logo_img {
+	width: 200px;
+	height: 150px;
+}
+
+.search_img {
+	width: 26px;
+	height: 26px;
+	margin-right: 7px;
+}
+
+.search_img img {
+	width: 26px;
+	height: 26px;
+}
+
+.search_box {
+	margin-left: 800px;
+	margin-top: 100px;
+	width: 200px;
+	height: 50px;
+	display: flex;
+}
+
+.search_input {
+	width: 150px;
+	height: 25px;
+	border-top: none;
+	border-left: none;
+	border-right: none;
+	border-bottom: 3px solid #6667AB;
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 18px;
+	color: black;
+	line-height: 25px;
+	background: transparent;
+}
+
+.search_input:focus {
+	outline: none;
+}
+
+.search_input::placeholder {
+	color: gray;
+}
+
+/* Menu 영역 */
+.top_menu_img_box {
+	width: 40px;
+	height: 40px;
+	margin-top: 96px;
+}
+.top_menu_img {
+	width: 40px;
+	height: 40px;
+}
+
+
+/* Main 콘텐츠 영역  */
 #main_place {
 	width: 100%;
 	height: 1000px;
-	background-image: url("../../resources/sej_img/back2.jpg");
+	/* background-image: url("../../resources/sej_img/back2.jpg"); */
 }
+
