--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -94,7 +94,7 @@ body {
   height: 100%;
   width: 0;
   position: fixed;
-  z-index: 1;
+  z-index: 999;
   top: 0;
   right: 0;
   background-color: #6667AB;
@@ -132,7 +132,7 @@ body {
 }
 .menu_bar_border {
 	display: block;
-	border-bottom: 1px solid #FFDE59;
+	border-bottom: 5px dashed #FFDE59;
 	padding-top: 50px;
 	margin-bottom: 80px;
 }
@@ -169,14 +169,14 @@ body {
 .menu_diary_img {
 	width: 130px;
 	height: 130px;
-	margin-left: 90px;
+	margin-left: 80px;
 	margin-top: 50px;
 	/* margin-bottom: 30px; */
 }
 /* Main 콘텐츠 영역  */
 #main_place {
 	width: 100%;
-	height: 1000px;
+	/* height: 1000px; */
 	/* background-image: url("../../resources/sej_img/back2.jpg"); */
 }
 
