[sej] 하단 슬라이드 작업 및 로고 홈 연결 + 메뉴바 수정

--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -15,8 +15,11 @@ body {
 /* 전체 감싸진 영역  */
 #background_box {
 	background-image: url("../../resources/sej_img/back2.jpg");
+	/* height: 2000px; */
 }
-
+#main_place {
+	height: 2000px;
+}
 /* Header 영역 css */
 #top_header {
 	width: 100%;
