--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -75,13 +75,15 @@ input[type=text] {
 }
 
 .left-area {
-  max-width: 190px;
+  width: 190px;
+  
   transition: all 0.6s linear;
   border-right: 1px solid #ddd;
   display: flex;
   flex-direction: column;
   height: 100%;
   padding-bottom: 20px;
+  
 }
 
 @media screen and (max-width: 900px) {
@@ -121,6 +123,7 @@ input[type=text] {
   /* align-items: flex-start; */
   cursor: pointer;
   padding: 20px;
+  
 }
 .profile img {
   width: 40px;
@@ -128,6 +131,7 @@ input[type=text] {
   object-fit: cover;
   border-radius: 6px;
   margin-right: 10px;
+  
 }
 .profile span {
   display: inline;
@@ -169,6 +173,7 @@ details > summary::maker{
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
+  
 }
 .item-link:not(:first-of-type) {
   margin-top: 10px;
