[sej] Create Footer

--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -7,6 +7,28 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Noto Sans KR';
+    src: url('../../resources/sej_font/NotoSansKR-Medium.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'Montserrat';
+    src: url('../../resources/sej_font/Montserrat-Medium.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'Montserrat-Thin';
+    src: url('../../resources/sej_font/Montserrat-Thin.otf') format('opentype');
+}
+
+@font-face {
+    font-family: 'sans-serif';
+    src: url('../../resources/sej_font/SansSerifFLF.otf') format('opentype');
+}
+
+
+
 body {
 	margin: 0;
 	padding: 0;
@@ -122,7 +144,7 @@ body {
   color: #FFDE59;
   display: block;
   transition: 0.3s;
-  font-family: 'GangwonEdu_OTFBoldA';
+  font-family: 'GangwonEdu_OTFBoldA','Noto Sans KR',sans-serif;
   font-size: 27px;
   width: 200px; 
 }
@@ -130,7 +152,7 @@ body {
 	text-decoration: none;
 	font-size: 25px;
   	color: #FFDE59;
-  	font-family: 'GangwonEdu_OTFBoldA';
+  	font-family: 'GangwonEdu_OTFBoldA','Noto Sans KR',sans-serif;
   	text-align: center;
 }
 .menu_bar_border {
@@ -147,7 +169,7 @@ body {
   color: #FFDE59;
   display: block;
   transition: 0.3s;
-  font-family: 'GangwonEdu_OTFBoldA';
+  font-family: 'GangwonEdu_OTFBoldA','Noto Sans KR',sans-serif;
   font-size: 30px;
   width: 200px; 
 }
@@ -182,4 +204,89 @@ body {
 	/* height: 1000px; */
 	/* background-image: url("../../resources/sej_img/back2.jpg"); */
 }
+
+/* footer 영역 */
+#bottom_footer {
+	width: 100%;
+	background-color: #F9F5EA;
+}
+.first_footer {
+	width: 100%;
+	/* border-top: 1px solid #6667AB; */
+	border-bottom: 1px solid #ebddba;
+	padding: 15px 0;
+	box-shadow:0 -2px 10px 0px #d8d8d8;
+}
+.first_footer_inner {
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.first_footer_inner a {
+	text-decoration: none;
+	margin-right: 3%;
+	font-family: 'Montserrat','Noto Sans KR',sans-serif;
+	color: #444444;
+	font-size: 13px;
+	font-weight: bold;
+}
+.first_footer_inner a:hover {
+	color: gray;
+}
+.second_footer {
+	width: 100%;
+}
+.second_footer_inner {
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.second_footer_logo_box {
+	margin-top: 50px;
+	margin-bottom: 10px;
+}
+.second_footer_logo_box img {
+	width: 200px;
+	height: 90px;
+}
+.second_footer_contentsBox {
+	display: flex;
+	font-family: 'Montserrat','Noto Sans KR',sans-serif;
+	font-size: 14px;
+	color: #444444;
+	padding: 10px 0px 60px 0px;
+}
+.second_footer_contentsBox span {
+	display:inline-block;
+	font-weight: bold;
+	margin-bottom: 20px;
+}
+.second_footer_first_box {
+	width: 30%;
+	line-height: 23px;
+}
+.second_footer_second_box {
+	width: 30%;
+	line-height: 23px;
+}
+.second_footer_third_box {
+	width: 40%;
+	line-height: 23px;
+}
+.footer_copyright {
+	width: 100%;
+	height: 23px;
+	line-height: 23px;
+	background-color: #6667AB;
+	text-align: center;
+	color: #fff;
+	font-size: 10px;
+	font-family: 'Montserrat','Noto Sans KR',sans-serif;
+}
+
+
+
+
+
+
 
