--- a/HoliDiary/src/main/webapp/resources/mj_css/mj_map.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/mj_map.css
@@ -3,7 +3,7 @@
  * that contains the map. 
  */
 #map {
-	height: 100%;
+	height: 600px;
 }
 
 /* 
@@ -15,90 +15,145 @@ html, body {
 	padding: 0;
 }
 
+#imageDownload {
+	text-align: right;
+	margin-top: -24px;
+}
+
+/* 드롭다운 */
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.worldGoButton {
+	padding: 10px 40px;
+	font-weight: 600px;
+	font-size: 20px;
+	background-color: #6667AB;
+	color: wheat;
+}
+
+#drop-content {
+	position: absolute;
+	z-index: 1;
+}
+
+#worldButton {
+	width: 5px;
+	text-align: center;
+	display: block;
+	font-weight: 600;
+	font-size: 20px;
+	background-color: #FFDE59;
+	color: #4f518e;
+	text-decoration: none;
+	padding: 10px 36px;
+	margin: 2px 0px 0px 0px;
+}
+
+/* 검색기능 */
 #floating-panel {
-  position: absolute;
-  top: 10px;
-  left: 25%;
-  z-index: 5;
-  background-color: #fff;
-  padding: 5px;
-  border: 1px solid #999;
-  text-align: center;
-  font-family: "Roboto", "sans-serif";
-  line-height: 30px;
-  padding-left: 10px;
+	position: absolute;
+	top: 10px;
+	left: 25%;
+	z-index: 5;
+	background-color: #fff;
+	padding: 5px;
+	border: 1px solid #999;
+	text-align: center;
+	font-family: "Roboto", "sans-serif";
+	line-height: 30px;
+	padding-left: 10px;
 }
 
 #description {
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 300;
 }
 
 #infowindow-content .title {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 #infowindow-content {
-  display: none;
+	display: none;
 }
 
 #map #infowindow-content {
-  display: inline;
+	display: inline;
 }
 
 .pac-card {
-  background-color: #fff;
-  border: 0;
-  border-radius: 2px;
-  box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
-  margin: 10px;
-  padding: 0 0.5em;
-  font: 400 18px Roboto, Arial, sans-serif;
-  overflow: hidden;
-  font-family: Roboto;
-  padding: 0;
+	background-color: #fff;
+	border: 0;
+	border-radius: 2px;
+	box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+	margin: 10px;
+	padding: 0 0.5em;
+	font: 400 18px Roboto, Arial, sans-serif;
+	overflow: hidden;
+	font-family: Roboto;
+	padding: 0;
 }
 
 #pac-container {
-  padding-bottom: 12px;
-  margin-right: 12px;
+	padding-bottom: 12px;
+	margin-right: 12px;
 }
 
 .pac-controls {
-  display: inline-block;
-  padding: 5px 11px;
+	display: inline-block;
+	padding: 5px 11px;
 }
 
 .pac-controls label {
-  font-family: Roboto;
-  font-size: 13px;
-  font-weight: 300;
+	font-family: Roboto;
+	font-size: 13px;
+	font-weight: 300;
 }
 
 #pac-input {
-  background-color: #fff;
-  font-family: Roboto;
-  font-size: 15px;
-  font-weight: 300;
-  margin-left: 12px;
-  padding: 0 11px 0 13px;
-  text-overflow: ellipsis;
-  width: 400px;
+	background-color: #fff;
+	font-family: Roboto;
+	font-size: 15px;
+	font-weight: 300;
+	margin-left: 12px;
+	padding: 0 11px 0 13px;
+	text-overflow: ellipsis;
+	width: 400px;
 }
 
 #pac-input:focus {
-  border-color: #4d90fe;
+	border-color: #4d90fe;
 }
 
 #title {
-  color: #fff;
-  background-color: #4d90fe;
-  font-size: 25px;
-  font-weight: 500;
-  padding: 6px 12px;
+	color: #fff;
+	background-color: #4d90fe;
+	font-size: 25px;
+	font-weight: 500;
+	padding: 6px 12px;
 }
 
 #target {
-  width: 345px;
+	width: 345px;
+}
+
+.custom-map-control-button {
+	background-color: #fff;
+	border: 0;
+	border-radius: 2px;
+	box-shadow: 0 1px 4px -1px rgba(0, 0, 0, 0.3);
+	margin: 10px;
+	padding: 0 0.5em;
+	font: 400 18px Roboto, Arial, sans-serif;
+	overflow: hidden;
+	height: 40px;
+	cursor: pointer;
+}
+
+.custom-map-control-button:hover {
+	background: rgb(235, 235, 235);
 }
