--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_join.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_join.css
@@ -25,3 +25,36 @@
 	margin-left: -400px;
 	text-align: center;
 }
+
+.join_site{
+	width: 150px;
+	height: 40px;
+	margin: 10px auto;
+}
+
+.join_site button{
+	width: 100%;
+	height: 100%;
+	font-size: 15pt;
+	font-family: 'GangwonEdu_OTFBoldA';
+	background-color: #6667AB;
+	color: white;
+	cursor: pointer;
+}
+
+.join_social{
+	border: 1px solid black;
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	top: 50%;
+	left: 50%;
+	margin-left: -100px;
+}
+
+.join_social button{
+	border: none;
+	background-color: transparent;
+	cursor: pointer;
+	width: 100%;
+}
