[JS] 카카오 소셜 회원가입 기능

--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
@@ -60,7 +60,7 @@
 #login_page_box{
 	position: absolute;
 	width: 500px;
-	height: 600px;
+	height: 500px;
 	top: 10%;
 	left: 50%;
 	margin-left: -250px;
@@ -71,10 +71,10 @@
 	border: 3px solid #6667AB;
 	border-radius: 10px;
 	width: 400px;
-	height: 500px;
+	height: 350px;
 	top: 50%;
 	left: 50%;
-	margin-top: -250px;
+	margin-top: -200px;
 	margin-left: -200px;
 	text-align: center;
 }
@@ -88,14 +88,13 @@
 
 .login_id input{
 	position: absolute;
-	width: 180px;
-	height: 30px;
+	width: 190px;
+	height: 40px;
 	top: 50%;
 	left: 50%;
 	margin-top: -15px;
 	margin-left: -90px;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-size: 10pt;
 }
 
 .login_pw{
@@ -108,20 +107,19 @@
 
 .login_pw input{
 	position: absolute;
-	width: 180px;
-	height: 30px;
+	width: 190px;
+	height: 40px;
 	top: 50%;
 	left: 50%;
 	margin-top: -15px;
 	margin-left: -90px;
-	font-family: 'GangwonEdu_OTFBoldA';
-	font-size: 13pt;
+	font-size: 10pt;
 }
 
 .login_btn{
 	width: 150px;
 	height: 40px;
-	margin: 10px auto;
+	margin: 20px auto;
 }
 
 .login_btn button{
@@ -153,27 +151,40 @@
 }
 
 .social_login_box{
-	border: 1px solid black;
 	position: absolute;
-	width: 200px;
-	height: 200px;
-	top: 50%;
+	width: 300px;
+	height: 80px;
+	top: 65%;
 	left: 50%;
-	margin-left: -100px;
+	margin-left: -150px;
 	
 }
 
-.social_login_box button{
-	border: none;
+.social_login_info{
+	margin-bottom: 10px;
+	padding-top: 10px;
+	border-top: 3px dashed #6667AB;
+}
+
+.social_login_info span{
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 13pt;
+}
+
+.social_login_box a{
 	background-color: transparent;
 	cursor: pointer;
-	width: 100%;
+}
+
+.socialLoginImg{
+	width: 50px;
+	margin: 5px;
 }
 
 
 .missing_user_box{
 	position: absolute;
-	bottom:0;
+	bottom:13%;
 	width: 90%;
 	text-align: right;
 	margin: 0 auto;
