--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_login.css
@@ -118,13 +118,13 @@
 	padding: 10px;
 }
 
-.login_btn{
+.login_btn_box{
 	width: 150px;
 	height: 40px;
 	margin: 20px auto;
 }
 
-.login_btn button{
+#login_btn{
 	width: 100%;
 	height: 100%;
 	font-size: 15pt;
