--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_find_user.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_find_user.css
@@ -48,7 +48,6 @@
 	color: #6667AB;
 }
 
-
 #find_id_box{
 	position: absolute;
 	border: 3px solid #6667AB;
@@ -69,6 +68,18 @@
 	margin: 10px auto;	
 }
 
+#find_id_valid{
+	position: absolute;
+	width: 100%;
+	height: 30px;
+	top: 50%;
+	left: 50%;
+	margin-left: -100px;	
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 13pt;
+	color: red;
+}
+
 #userID_show{
 	position: absolute;
 	width: 100%;
@@ -78,6 +89,7 @@
 	margin-left: -100px;	
 	font-family: 'GangwonEdu_OTFBoldA';
 	font-size: 13pt;
+	color: red;
 }
 
 .find_id_name_box{
@@ -134,6 +146,7 @@
 	background-color: #6667AB;
 	color: white;
 	cursor: pointer;
+	border: none;
 }
 
 
@@ -191,11 +204,27 @@
 	text-align: center;
 }
 
+.find_pw_error_box{
+	position: relative;
+	width: 100%;
+	height: 100px;
+}
+
+.find_pw_error_box span{
+	width: 150px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -75px;
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 13pt;
+}
+
 .find_pw_id_box{
 	position: relative;
 	width: 200px;
 	height: 50px;
-	margin: 5px auto;	
+	margin: 10px auto;
 	text-align: center;
 }
 
@@ -215,7 +244,7 @@
 	position: relative;
 	width: 200px;
 	height: 50px;
-	margin: 5px auto;	
+	margin: 10px auto;	
 	text-align: center;
 }
 
@@ -245,8 +274,8 @@
 	background-color: #6667AB;
 	color: white;
 	cursor: pointer;
+	border: none;
 }
-
 
 #find_pw_result_page_box{
 	position: absolute;
