--- a/HoliDiary/src/main/webapp/resources/sej_css/home_search.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/home_search.css
@@ -60,12 +60,12 @@
 	height: 600px;
 	font-family: 'Noto Sans Light','sans-serif';
 	/* border-bottom: 1px solid black; */
-	margin-right: 50px;
+	margin-right: 70px;
 }
 
 
 #home_search_content_place {
-	width: 1200px;
+	width: 1300px;
 	display: flex;
 	position: relative;
 	left: 30px;
@@ -94,7 +94,7 @@
 	display: block;
   	width: 100%;
   	height: 100%;
-  	object-fit: fill;
+  	object-fit: cover;
   	box-shadow: 3px 2px 5px #c5c5c5;
 }
 
@@ -113,39 +113,53 @@
 
 .home_search_text_box {
 	margin-bottom: 120px;
-	letter-spacing: 1.5px;
+	/* letter-spacing: 1px; */
     line-height: 20px;
     text-align: justify;
+    display: inline-block;
 }
-
+.home_search_writer {
+	display: block;
+	width: 50px;
+	position: absolute;
+	
+}
 .home_search_recommend {
-	margin-left: 148px;
+	position: absolute;
+	margin-left: 190px; 
+	display: block;
 }
 
 .home_search_category {
-	position: relative;
-	top: -470px;
-	left: 250px;
-	width: 50px;
+	position: absolute;
+	display: inline-block;
+	top: 118px;
+	margin-left: 250px;
+	/* top: -470px;
+	left: 250px; */
+	width: 80px;
 	color: #FFDE59;
 	font-weight: bold;
 	background-color: #6667AB;
 	padding: 10px;
 	font-size: 13px;
 	letter-spacing: 0.2px;
+	text-align: center;
 }
 
 .home_search_country {
-	position: relative;
-	top: -430px;
-	left: 170px;
-	width: 50px;
+	position: absolute;
+	display: inline-block;
+	top: 75px;
+	margin-left: 250px;
+	width: 75px;
 	color: #FFDE59;
 	font-weight: bold;
 	background-color: #6667AB;
 	padding: 10px;
 	font-size: 13px;
 	letter-spacing: 0.2px;
+	text-align: center;
 }
 .home_search_null_place {
 	width: 1200px;
