[sm] 세션 처리 및 스케줄러 수정

--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -663,8 +663,8 @@ details > summary::maker{
 }
 
 .contextmenu li:hover {
-  background: #CE93D8;
-  border-left: 3px solid #9C27B0;
+  background: #bebebe;
+  border-left: 3px solid #707070;
 }
 
 .contextmenu li:hover a {
