--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
@@ -26,14 +26,6 @@
 	cursor: pointer;
 }
 
-.mypage_index:hover{
-	background-color: #FFDE59;
-}
-
-.mypage_index:hover span{
-	color: #6667AB;
-}
-
 .mypage_index span{
 	position: absolute;
 	top:50%;
@@ -69,24 +61,104 @@
 	border-bottom: 3px dashed #6667AB;
 }
 
+.mypage_myinfo_left{
+	display: inline-block; 
+	width: 300px; 
+	height: 600px; 
+	margin-right: 20px;
+	text-align: left;
+}
+
+.mypage_myinfo_left div{
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 15pt;
+}
+
 .mypage_myinfo_img{
+	position: relative;
 	width: 300px;
 	height: 300px;
 	text-align: center;
 	overflow: hidden;
+	margin-bottom: 20px;
 }
 
 .mypage_myinfo_img img{
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	
 }
 
-#mypage_modify{
+.mypage_myinfo_img_change{
+	position: absolute;
+	width: 300px;
+	height: 40px;
+	bottom: 0px;
+}
+
+.mypage_myinfo_img_change label{
+	display:inline-block;
+	width: 100%;
+	height: 100%;
+    color: black;
+    vertical-align: middle;
+    cursor: pointer;
+	width: 100%;
+    background-color: white;
+    opacity: 0.7;
+}
+
+.mypage_myinfo_img_change input[type="file"]{
 	display: none;
 }
 
-#mypage_subscribe{
+.myapge_myinfo_right{
+	display: inline-block;
+	width: 800px;
+	height: 650px;
+	vertical-align: top;
+	text-align:left;
+	padding: 20px;
+}
+
+.myapge_myinfo_right_txt{
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 15pt;
+	margin: 20px;
+}
+
+.myapge_myinfo_right_txt div{
+	display: inline-block;
+	width: 100px;
+}
+
+.myapge_myinfo_right_txt input{
+	width: 200px;
+	height: 50px;
+	padding: 10px;
+	margin: 10px;
+}
+
+.myapge_myinfo_right_btn_box{
+	text-align: right;
+}
+
+.myapge_myinfo_right_btn_box button{
+	width: 130px;
+	height: 50px;
+	font-size: 15pt;
+	font-family: 'GangwonEdu_OTFBoldA';
+	background-color: #6667AB;
+	color: white;
+	cursor: pointer;
+	border: none;
+	margin: 10px;
+}
+
+#mypage_following{
+	display: none;
+}
+
+#mypage_follower{
 	display: none;
 }
