--- a/HoliDiary/src/main/webapp/resources/sej_css/home_search.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/home_search.css
@@ -117,6 +117,13 @@
     line-height: 20px;
     text-align: justify;
     display: inline-block;
+    overflow : hidden;
+	text-overflow : ellipsis; /* (width를 설정하지 않고 여기까진 위와 동일하다.) */
+	height : 200px; /* (대신 height를 설정해준다. 텍스트 크기에 맞춰 height가 1줄인 경우를 생각하자.) */
+	word-wrap : brek-word; 
+	display : -webkit-box;
+	-webkit-line-clamp : 1; /* (줄 개수를 설정한다. 만약 2줄이상이라면 height와 해당 값을 수정한다.) */
+	-webkit-box-orient: vertical; 
 }
 .home_search_writer {
 	display: block;
