--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
@@ -112,6 +112,100 @@
 	display: none;
 }
 
+.mypage_myinfo_social_box{
+	width: 70%;
+	height: 200px;
+	border-radius: 10px;
+	background-color: #fcf9f5;
+	margin-top: 50px;
+	box-shadow: 0 5px 18px -7px rgba(0,0,0,1);
+}
+
+.mypage_myinfo_social_title{
+	width: 100%;
+	height: 50px;
+	padding: 15px;
+	font-size: 20pt;
+}
+
+.mypage_myinfo_social_kakao{
+	width: 90%;
+	height: 40px;
+	position: relative;
+	margin: 20px;
+}
+
+.mypage_myinfo_social_kakao img{
+	position:absolute;
+	width: 35px;
+	margin-right: 10px;
+}
+
+.mypage_myinfo_social_naver{
+	width: 90%;
+	height: 40px;
+	position: relative;
+	margin: 20px;
+}
+
+.mypage_myinfo_social_naver img{
+	position:absolute;
+	width: 35px;
+	margin-right: 10px;
+}
+
+.social_switch{
+	position: relative;
+	display: inline-block;
+	width: 55px;
+	height: 30px;
+}
+
+.social_switch input{
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.onoff-switch{
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    border-radius:20px;
+    background-color: #ccc;
+    box-shadow: inset 1px 5px 1px #999;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.onoff-switch:before{
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 4px;
+    bottom: 4px;
+    background-color: #fff;
+    -webkit-transition: .5s;
+    transition: .4s;
+    border-radius:20px;
+}
+
+.social_switch input:checked + .onoff-switch{
+    background-color: #F2D522;
+    box-shadow: inset 1px 5px 1px #E3AE56;
+}
+
+.social_switch input:checked + .onoff-switch:before{
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+     transform: translateX(26px);
+}
+
+
 .myapge_myinfo_right{
 	display: inline-block;
 	width: 800px;
@@ -127,6 +221,74 @@
 	margin: 20px;
 }
 
+.mypage_myinfo_mydiaryURL{
+	text-align: right;
+	position: relative;
+}
+
+#mapage_mydiaryURL_box{
+	display: inline-block;
+	position: relative;
+	overflow: hidden;
+	background-color: #FFDE59;
+	width: 130px;
+	height: 40px;
+	border-radius: 10px;
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 15pt;
+	cursor: pointer;
+}
+
+#mapage_mydiaryURL_box:hover{
+	background-color: #ffd737;
+}
+
+#mapage_mydiaryURL_box span{
+	position: absolute;
+	top: 28%;
+	left: 14%;
+}
+
+#mapage_mydiaryURL_box img{
+	width: 28px;
+	position: absolute;
+	top: 23%;
+	right: 10%;
+}
+
+.mypage_myinfo_mydiaryURL div:nth-child(2){
+	display: none;
+	position: absolute;
+	top: 50px;
+	right: 0;
+	width: 300px;
+	height: 50px;
+	background-color: #fbf8f4;
+	border-radius: 10px;
+	box-shadow: 0 5px 18px -7px rgba(0,0,0,1);
+}
+
+#mp_mydiary_copyURL{
+	width: 200px;
+	height: 30px;
+	border-radius: 5px;
+	padding: 5px;
+	margin-top: 10px;
+	border: 2px solid #c0c0c0;
+	outline: none;
+}
+
+#mp_mydiary_copy_btn{
+	width: 50px;
+	height: 30px;
+	border-radius: 5px;
+	border: none;
+	background-color: #c0c0c0;
+	margin-top: 10px;
+	margin-right: 10px;
+	cursor: pointer;
+}
+
 .myapge_myinfo_right_txt div{
 	display: inline-block;
 	width: 100px;
@@ -136,7 +298,7 @@
 	width: 200px;
 	height: 50px;
 	padding: 10px;
-	margin: 10px;
+	margin: 5px;
 }
 
 .myapge_myinfo_right_btn_box{
