--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -495,6 +495,7 @@ details > summary::maker{
   height: 100%;
   flex-shrink: 0;
   border-radius: 4px;
+  margin-top: -50px;
 }
 .hero-img-wrapper img {
   width: 100%;
