[sej] 아이템샵 기본 css 구현 중 및 contentPage height 수정

--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -40,7 +40,8 @@ body {
 	/* height: 2000px; */
 }
 #main_place {
-	height: 2000px;
+	height: 100%;
+	/* 원래  height 2000px */
 }
 /* Header 영역 css */
 #top_header {
