--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
@@ -1,9 +1,11 @@
 @charset "UTF-8";
 
+/* 마미페이지 my info */
+
 #content_mypage{
 	position: relative;
 	width: 1400px;
-	height: 100%;
+	height: 1000px;
 	margin: 0 auto;
 }
 
@@ -49,12 +51,23 @@
 }
 
 .mypage_myinfo_title{
+	position: relative;
 	color: #6667AB;
 	font-family: 'GangwonEdu_OTFBoldA';
 	font-size: 20pt;
 	padding: 10px;
 	margin-bottom: 30px;
 	border-bottom: 3px dashed #6667AB;
+}
+
+.mypage_myinfo_title a{
+	position:absolute;
+	right: 0;
+	bottom:10px;
+	text-decoration: none;
+	font-size: 13pt;
+	color: #6667AB;
+	border-radius: 5px;
 }
 
 .mypage_myinfo_left{
@@ -297,6 +310,10 @@
 	margin: 5px;
 }
 
+.myapge_myinfo_right_txt > span{
+	font-size: 11pt;
+}
+
 .myapge_myinfo_right_btn_box{
 	text-align: right;
 }
@@ -313,10 +330,54 @@
 	margin: 10px;
 }
 
-#mypage_following{
-	display: none;
+/* 비번 수정 */
+
+.mypage_changePW_title{
+	position: relative;
+	color: #6667AB;
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 20pt;
+	padding: 10px;
+	margin-bottom: 30px;
+	border-bottom: 3px dashed #6667AB;
 }
 
-#mypage_follower{
-	display: none;
+
+.mypage_changePW_content_box{
+	padding: 20px;
+}
+
+.mypage_changePW_input_box{
+	margin-bottom: 20px;
+	font-family: 'GangwonEdu_OTFBoldA';
+	font-size: 15pt;
+}
+
+.mypage_changePW_input_box div{
+	margin-bottom: 10px;
+	padding-left: 5px;
+}
+
+.mypage_changePW_input_box input{
+	width: 200px;
+	height: 50px;
+	padding: 10px;
+	margin: 5px;
+}
+
+.mypage_changePW_btn button{
+	width: 130px;
+	height: 50px;
+	font-size: 15pt;
+	font-family: 'GangwonEdu_OTFBoldA';
+	background-color: #6667AB;
+	color: white;
+	cursor: pointer;
+	border: none;
+	margin: 10px;
+}
+
+.mypage_changePW_error{
+	font-size: 11pt;
+	margin-left: 10px;
 }
