--- a/HoliDiary/src/main/webapp/resources/sej_css/home_search.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/home_search.css
@@ -33,6 +33,7 @@
 
 #home_search_inner_place {
 	width: 1400px;
+	height: 900px;
 	margin-left: auto;
 	margin-right: auto;
 	margin-top: 150px;
@@ -170,6 +171,7 @@
 }
 .home_search_null_place {
 	width: 1200px;
+	height: 500px;
 	text-align: center;
 	margin-left: auto;
 	margin-right: auto;
