--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_join.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_join.css
@@ -14,6 +14,13 @@
 	margin: 0 auto;
 }
 
+#content_join_last{
+	position: relative;
+	width: 1100px;
+	height: 800px;
+	margin: 0 auto;
+}
+
 #join_option_box{
 	position: absolute;
 	border-radius: 10px;
@@ -178,7 +185,7 @@
 	position: absolute;
 	width: 100%;
 	height: 500px;
-	top: 5%;
+	top: 100px;
 	left: 50%;
 	margin-left: -50%;
 }
@@ -193,29 +200,37 @@
 	font-size: 15pt;
 }
 
-
+.join_last_info{
+	position: relative;
+	display: inline-block;
+	width: 70%;
+	height: 100%;
+	border-radius: 10px;
+	box-shadow: 0 5px 18px -7px rgba(0,0,0,1);
+	background-color: #F9F2ED;
+}
 
 #join_img_box{
 	width: 330px;
 	height: 330px;
-	border-radius: 50%;
-	border: 5px solid #6667AB;
-	margin: 20px auto;
+	margin: 20px;
+	border-radius: 10px;
+	background-color: white;
 	text-align: center;
 	overflow: hidden;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 
 #join_preview_img{
 	width: 100%;
 	height: 100%;
-	border-radius: 50%;
 	object-fit: cover;
 }
 
 .join_file_input_box{
 	margin: 20px;
-	text-align: center;
+	text-align: left;
 }
 
 .join_upload_name{
@@ -231,31 +246,50 @@
 .join_file_input_box label{
 	display: inline-block;
     padding: 10px 10px;
-    color: gray;
+    color: white;
     vertical-align: middle;
-    background-color: transparent;
+    background-color: gray;
     font-family: 'GangwonEdu_OTFBoldA';
     font-size: 12pt;
     cursor: pointer;
     height: 30px;
     margin-left: 10px;
-    border: 2px solid gray;
+	border-radius: 5px;
 }
 
 .join_file_input_box input[type="file"]{
 	display: none;
 }
 
+.join_last_infotxt_box{
+	position:absolute;
+	top: 20px;
+	left: 55%;
+	display: inline-block; 
+	width: 38%;
+}
+
+.join_last_infotxt{
+	font-size: 15pt;
+	font-family: 'GangwonEdu_OTFBoldA';
+	margin: 20px;
+}
+
+.join_last_infotxt span{
+	margin-bottom: 10px;
+}
+
 .join_file_btn_box{
-	width: 500px;
-	height: 40px;
+	display: inline-block;
+	width: 27%;
+	height: 100%;
 	margin: 10px auto;
 	text-align: center;
 }
 
 .join_file_reg_btn{
 	width: 100px;
-	height: 100%;
+	height: 40px;
 	font-size: 15pt;
 	font-family: 'GangwonEdu_OTFBoldA';
 	background-color: #6667AB;
