--- a/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
+++ b/HoliDiary/src/main/webapp/resources/kjs_css/kjs_mypage.css
@@ -90,6 +90,7 @@
 	text-align: center;
 	overflow: hidden;
 	margin-bottom: 20px;
+	box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .mypage_myinfo_img img{
