--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -397,26 +397,16 @@ details > summary::maker{
   overflow: auto;
 }
 
-.content-line {
+/* .content-line {
   width: 100%;
   position: relative;
 }
 .content-line + .content-line {
   margin-top: 24px;
   transition: 0.2s;
-}
-.content-line .header-text {
-  display: block;
-  line-height: 24px;
-  font-weight: 500;
-  font-size: 16px;
-  color: #232428;
-}
+} */
 
-.line-header {
-  position: absolute;
-  padding: 0 10px;
-}
+
 
 .content-line-hero .owl-dots {
   position: absolute;
@@ -494,23 +484,25 @@ details > summary::maker{
   width: 100%;
   height: 100%;
   flex-shrink: 0;
-  border-radius: 4px;
+  /* border-radius: 4px; */
   margin-top: -50px;
 }
 .hero-img-wrapper img {
   width: 100%;
   height: 100%;
   object-fit: cover;
+ /*  border-radius: 10px 10px 10px 10px; */
 }
 
 .owl-carousel {
   position: relative;
   width: 100%;
-  height: 280px;
+  height: 370px;
   display: flex;
   align-items: center;
   padding-top: 32px;
   padding-bottom: 8px;
+  border-radius: 6px;
 }
 
 .upload-text-wrapper {
@@ -623,6 +615,7 @@ details > summary::maker{
 #owl-slider-1 .hero-img-wrapper img {
   display: block;
   width: 100%;
+  border-radius: 6px;
 }
 
 .owl-stage {
