--- a/HoliDiary/src/main/webapp/resources/mj_css/mj_map.css
+++ b/HoliDiary/src/main/webapp/resources/mj_css/mj_map.css
@@ -10,14 +10,14 @@
  * Optional: Makes the sample page fill the window. 
  */
 html, body {
-	height: 100%;
+	/* height: 100%; */
 	margin: 0;
 	padding: 0;
 }
 
 #imageDownload {
 	text-align: right;
-	margin-top: -52px;
+	float: right;
 }
 
 .imageDownloadButton {
@@ -65,20 +65,6 @@ html, body {
 
 
 /*검색기능*/
-#floating-panel {
-	position: absolute;
-	top: 10px;
-	left: 25%;
-	z-index: 5;
-	background-color: #fff;
-	padding: 5px;
-	border: 1px solid #999;
-	text-align: center;
-	font-family: "Roboto", "sans-serif";
-	line-height: 30px;
-	padding-left: 10px;
-}
-
 #description {
 	font-family: Roboto;
 	font-size: 15px;
@@ -110,21 +96,6 @@ html, body {
 	padding: 0;
 }
 
-#pac-container {
-	padding-bottom: 12px;
-	margin-right: 12px;
-}
-
-.pac-controls {
-	display: inline-block;
-	padding: 5px 11px;
-}
-
-.pac-controls label {
-	font-family: Roboto;
-	font-size: 13px;
-	font-weight: 300;
-}
 
 #pac-input {
 	background-color: #fff;
@@ -144,11 +115,7 @@ html, body {
 #title {
 	color: #fff;
 	background-color: #4d90fe;
-	font-size: 25px;
+	font-size: 15px;
 	font-weight: 500;
 	padding: 6px 12px;
-}
-
-#target {
-	width: 345px;
 }
