--- a/HoliDiary/src/main/webapp/resources/sej_css/home.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/home.css
@@ -7,6 +7,8 @@
 }
 .home_container {
 	height: 2000px;
+	width: 100%;
+	/* background-image: url("../../resources/sej_img/back2.jpg"); */
 }
 .main_slider {
 	width: 1200px;
@@ -113,6 +115,28 @@
     opacity: .75;
     color: black;
 }
+
+/* 반응형 설정 부분 */
+/* PC (해상도 1024px)*/ 
+@media all and (min-width:1024px) {
+  ...
+} 
+
+/* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
+@media all and (min-width:768px) and (max-width:1023px) {
+  ...
+} 
+
+/* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
+@media all and (max-width:767px) {
+  .main_slider {
+	width: 767px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+}
+
 
 /* Second slider */
 .second_slider_title {
