--- a/HoliDiary/src/main/webapp/resources/sej_css/index.css
+++ b/HoliDiary/src/main/webapp/resources/sej_css/index.css
@@ -32,14 +32,16 @@
 body {
 	margin: 0;
 	padding: 0;
+	background-image: url("../../resources/sej_img/back2.jpg");
 }
 
 /* 전체 감싸진 영역  */
 #background_box {
-	background-image: url("../../resources/sej_img/back2.jpg");
+	width: 100%;
 	/* height: 2000px; */
 }
 #main_place {
+	width: 100%;
 	height: 100%;
 	/* 원래  height 2000px */
 }
@@ -104,12 +106,109 @@ body {
 .search_input::placeholder {
 	color: gray;
 }
-
-/* Menu 영역 */
+/* 반응형 설정 부분 */
+/* PC (해상도 1024px)*/ 
+@media all and (min-width:1024px) {
+	
 .top_menu_img_box {
 	width: 40px;
 	height: 40px;
 	margin-top: 96px;
+	margin-left: 30px;
+}
+	
+  .first_footer_inner {
+	width: 1200px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.second_footer_contentsBox {
+	display: flex;
+	font-family: 'Montserrat','Noto Sans KR',sans-serif;
+	font-size: 14px;
+	color: #444444;
+	padding: 10px 0px 60px 0px;
+}
+
+} 
+
+/* 테블릿 가로, 테블릿 세로 (해상도 768px ~ 1023px)*/ 
+@media all and (min-width:768px) and (max-width:1023px) {
+  ...
+} 
+
+/* 모바일 가로, 모바일 세로 (해상도 480px ~ 767px)*/ 
+@media all and (max-width:767px) {
+	
+  .header_contents_box {
+	width: 767px;
+	margin-left: auto;
+	margin-right: auto;
+	display: flex;
+}
+.search_box {
+    margin-left: 320px;
+    margin-top: 60px;
+    width: 200px;
+    height: 50px;
+    display: flex;
+}
+.header_logo_img {
+	width: 150px;
+	height: 100px;
+}
+.logo_img_go_home {
+	width: 150px;
+	height: 100px;
+	margin-left: 30px;
+}
+.top_menu_img_box {
+	width: 40px;
+	height: 40px;
+	margin-top: 50px;
+	margin-left: 30px;
+}
+
+.first_footer_inner {
+	width: 650px;
+	margin-left: auto;
+	margin-right: auto;
+}
+.second_footer_logo_box img {
+    margin-left: 50px;
+}
+.second_footer_contentsBox {
+	font-family: 'Montserrat','Noto Sans KR',sans-serif;
+	font-size: 14px;
+	color: #444444;
+	padding: 10px 0px 60px 0px;
+}
+
+.second_footer_first_box {
+	width: 30%;
+	line-height: 23px;
+	margin-bottom: 30px;
+	padding-left: 50px;
+}
+.second_footer_second_box {
+	width: 30%;
+	line-height: 23px;
+	padding-left: 50px;
+	margin-bottom: 30px;
+}
+.second_footer_third_box {
+	width: 40%;
+	line-height: 23px;
+	padding-left: 50px;
+}
+
+}
+/* Menu 영역 */
+.top_menu_img_box {
+	width: 40px;
+	height: 40px;
+	/* margin-top: 96px; */
 	margin-left: 30px;
 }
 .top_menu_img {
@@ -248,7 +347,7 @@ body {
 	box-shadow:0 -2px 10px 0px #d8d8d8;
 }
 .first_footer_inner {
-	width: 1200px;
+	/* width: 1200px; */
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -280,7 +379,7 @@ body {
 	height: 90px;
 }
 .second_footer_contentsBox {
-	display: flex;
+/* 	display: flex; */
 	font-family: 'Montserrat','Noto Sans KR',sans-serif;
 	font-size: 14px;
 	color: #444444;
