--- a/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
+++ b/HoliDiary/src/main/webapp/resources/sm_css/sm_popup.css
@@ -236,6 +236,39 @@ details > summary::maker{
   margin-bottom: -15px;
 }
 
+.btn-update-save {
+  background-color: #7d7d7d;
+  border: none;
+  color: #fff;
+  border-radius: 10px;
+  padding: 8px;
+  font-size: 13px;
+  line-height: 20px;
+  width: 70px;
+}
+
+.btn-img-upload {
+  width: 150px;
+  height: 30px;
+  background: #fff;
+  border: 1px solid rgb(77,77,77);
+  border-radius: 10px;
+  font-weight: 500;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.btn-img-upload:hover{
+	background: rgb(77,77,77);
+    color: #fff;
+}
+
+#file {
+  display: none;
+}
+
 .btn-invite:hover {
   background-color: #000000;
 }
